添加点击返回按键两次退出游戏功能

--- a/app/src/main/res/layout/layout_coin_msg.xml
+++ b/app/src/main/res/layout/layout_coin_msg.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="8dp"
-        android:text="Message"
+        android:text="@string/get_coin"
         android:textColor="#ffffff"
         android:textSize="20sp"
         android:textStyle="bold" />
