--- a/app/src/main/res/drawable-hdpi/bg_button.xml
+++ b/app/src/main/res/drawable-hdpi/bg_button.xml
@@ -3,10 +3,10 @@
 
     <corners android:radius="8dp" />
 
-    <solid android:color="#8b4513" />
+    <solid android:color="#592713" />
 
     <stroke
-        android:width="2dp"
+        android:width="1dp"
         android:color="#ffffff" />
 
 </shape>
