--- a/app/src/main/res/layout/layout_recyclerview_item.xml
+++ b/app/src/main/res/layout/layout_recyclerview_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
-    android:background="@drawable/button_shape_corner">
+    android:background="@android:color/transparent">
 
     <LinearLayout
         android:layout_width="match_parent"
