--- a/app/src/main/res/layout/layout_recyclerview_item.xml
+++ b/app/src/main/res/layout/layout_recyclerview_item.xml
@@ -11,13 +11,27 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/img_avatar"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_margin="8dp"
-            android:padding="1dp"
-            android:src="@drawable/icon" />
+        <RelativeLayout
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:layout_margin="2dp">
+
+            <ImageView
+                android:id="@+id/img_avatar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="8dp"
+                android:padding="1dp"
+                android:src="@drawable/avatar_0" />
+
+            <ImageView
+                android:id="@+id/img_gold"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:src="@drawable/gold_medal"
+                android:visibility="visible" />
+        </RelativeLayout>
+
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -29,11 +43,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_margin="10dp"
+                android:layout_margin="4dp"
                 android:gravity="center"
                 android:text="Sam"
                 android:textColor="#ffffff"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -41,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="18dp"
+                android:layout_marginLeft="12dp"
                 android:layout_toRightOf="@id/tv_name"
                 android:gravity="center"
                 android:text="99999"
@@ -60,7 +74,7 @@
                 android:lines="1"
                 android:text="2018/1/27"
                 android:textColor="#ffffff"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 android:textStyle="italic" />
         </RelativeLayout>
 
