--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -26,8 +26,7 @@
             android:gravity="center"
             android:text="@string/copyright"
             android:textColor="#ffffff"
-            android:textSize="18sp"
-            android:textStyle="italic" />
+            android:textSize="14sp" />
     </LinearLayout>
 
 </RelativeLayout>
